DAM-36: Manage Approvers for Users, DAM-39: Rename Resource To Asset (#37)